// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toCode.generateVueCode > 包含从 @twi1i9ht/visual-lib 的导入并使用单引号绑定 props 1`] = `
"<template>
  <div class="runtime-container">
    <vText
      :ref="setComponentRef('txt-1')"
      :style='{"position":"absolute","left":"0px","top":"0px","width":"100px","height":"30px","transform":"rotate(0deg)","zIndex":1}'
      :title='"Hello"'
    >
      {{ "Hello" }}
    </vText>

  </div>
</template>

<script setup lang="ts">
import { ref, onMounted, nextTick } from 'vue'
import type { ComponentPublicInstance } from 'vue'
import { vText } from '@twi1i9ht/visual-lib'
import '@twi1i9ht/visual-lib/dist/style.css'

// 组件 Ref 类型定义
type ComponentRef = Element | ComponentPublicInstance | null

// 组件 ref 引用
const componentRefs = ref<Record<string, ComponentRef>>({})

// 设置组件 ref 的辅助函数
const setComponentRef = (id: string) => (el: ComponentRef) => {
  if (el) componentRefs.value[id] = el
}

// 组件数据


// 动画样式对象


// 动画处理函数


// 页面加载时触发的动画
onMounted(() => {
  nextTick(() => {
    // 没有需要在页面加载时触发的动画
  })
})

// 事件处理函数

</script>

<style scoped>
.runtime-container {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background-color: #f5f5f5;
}

/* 动画效果 */
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}
.anim-fade {
  animation: fadeIn 0.8s ease both;
}

@keyframes zoomIn {
  0% { transform: scale(0.3); opacity: 0; }
  60% { opacity: 1; }
  100% { transform: scale(1); }
}
.anim-zoom {
  animation: zoomIn 0.7s cubic-bezier(0.4, 0, 0.2, 1) both;
}

@keyframes slideLeft {
  0% { transform: translateX(40px); opacity: 0; }
  100% { transform: translateX(0); opacity: 1; }
}
.anim-slide-left {
  animation: slideLeft 0.6s ease-out both;
}

@keyframes slideUp {
  0% { transform: translateY(40px); opacity: 0; }
  100% { transform: translateY(0); opacity: 1; }
}
.anim-slide-up {
  animation: slideUp 0.6s ease-out both;
}

@keyframes bounceIn {
  0% { transform: scale(0.5); opacity: 0; }
  60% { transform: scale(1.1); opacity: 1; }
  80% { transform: scale(0.95); }
  100% { transform: scale(1); }
}
.anim-bounce {
  animation: bounceIn 0.7s cubic-bezier(0.68, -0.55, 0.27, 1.55) both;
}

@keyframes rotateIn {
  0% { transform: rotate(-180deg); opacity: 0; }
  100% { transform: rotate(0deg); opacity: 1; }
}
.anim-rotate {
  animation: rotateIn 0.7s ease-out both;
}

/* 动画触发类 */
.animation-trigger-hover:hover .animated,
.animation-trigger-click.clicked .animated {
  animation-play-state: running;
}

.animation-paused {
  animation-play-state: paused !important;
}

.animated {
  animation-fill-mode: both;
}

/* 高亮效果 */
.highlight-effect {
  outline: 3px solid #409eff;
  outline-offset: 2px;
  box-shadow: 0 0 10px rgba(64, 158, 255, 0.5);
  transition: all 0.3s ease;
}

/* 展开效果 */
.expanded {
  transform: scale(1.1);
  z-index: 1000;
  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
  transition: all 0.3s ease;
}
</style>
"
`;

exports[`toCode.generateVueCode > 正确生成嵌套结构：vMap 包含 vMarker 1`] = `
"<template>
  <div class="runtime-container">
    <vMap
      :ref="setComponentRef('map-1')"
      :style='{"position":"absolute","left":"0px","top":"0px","width":"600px","height":"400px","transform":"rotate(0deg)","zIndex":1}'
    >
      <vMarker
        :ref="setComponentRef('marker-1')"
        :style='{"position":"absolute","left":"10px","top":"10px","width":"20px","height":"20px","transform":"rotate(0deg)","zIndex":2}'
      :label='"M"'
      />
    </vMap>

  </div>
</template>

<script setup lang="ts">
import { ref, onMounted, nextTick } from 'vue'
import type { ComponentPublicInstance } from 'vue'
import { vMap, vMarker } from '@twi1i9ht/visual-lib'
import '@twi1i9ht/visual-lib/dist/style.css'

// 组件 Ref 类型定义
type ComponentRef = Element | ComponentPublicInstance | null

// 组件 ref 引用
const componentRefs = ref<Record<string, ComponentRef>>({})

// 设置组件 ref 的辅助函数
const setComponentRef = (id: string) => (el: ComponentRef) => {
  if (el) componentRefs.value[id] = el
}

// 组件数据


// 动画样式对象


// 动画处理函数


// 页面加载时触发的动画
onMounted(() => {
  nextTick(() => {
    // 没有需要在页面加载时触发的动画
  })
})

// 事件处理函数

</script>

<style scoped>
.runtime-container {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background-color: #f5f5f5;
}

/* 动画效果 */
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}
.anim-fade {
  animation: fadeIn 0.8s ease both;
}

@keyframes zoomIn {
  0% { transform: scale(0.3); opacity: 0; }
  60% { opacity: 1; }
  100% { transform: scale(1); }
}
.anim-zoom {
  animation: zoomIn 0.7s cubic-bezier(0.4, 0, 0.2, 1) both;
}

@keyframes slideLeft {
  0% { transform: translateX(40px); opacity: 0; }
  100% { transform: translateX(0); opacity: 1; }
}
.anim-slide-left {
  animation: slideLeft 0.6s ease-out both;
}

@keyframes slideUp {
  0% { transform: translateY(40px); opacity: 0; }
  100% { transform: translateY(0); opacity: 1; }
}
.anim-slide-up {
  animation: slideUp 0.6s ease-out both;
}

@keyframes bounceIn {
  0% { transform: scale(0.5); opacity: 0; }
  60% { transform: scale(1.1); opacity: 1; }
  80% { transform: scale(0.95); }
  100% { transform: scale(1); }
}
.anim-bounce {
  animation: bounceIn 0.7s cubic-bezier(0.68, -0.55, 0.27, 1.55) both;
}

@keyframes rotateIn {
  0% { transform: rotate(-180deg); opacity: 0; }
  100% { transform: rotate(0deg); opacity: 1; }
}
.anim-rotate {
  animation: rotateIn 0.7s ease-out both;
}

/* 动画触发类 */
.animation-trigger-hover:hover .animated,
.animation-trigger-click.clicked .animated {
  animation-play-state: running;
}

.animation-paused {
  animation-play-state: paused !important;
}

.animated {
  animation-fill-mode: both;
}

/* 高亮效果 */
.highlight-effect {
  outline: 3px solid #409eff;
  outline-offset: 2px;
  box-shadow: 0 0 10px rgba(64, 158, 255, 0.5);
  transition: all 0.3s ease;
}

/* 展开效果 */
.expanded {
  transform: scale(1.1);
  z-index: 1000;
  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
  transition: all 0.3s ease;
}
</style>
"
`;
